--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -40,7 +40,7 @@
             alt="divar logo" />
         </a>
 
-        <div class="navbar-collapse collapse " id="mynavbar">
+        <div class="navbar-collapse collapse fs-8" id="mynavbar">
           <ul class="navbar-nav flex-row-reverse w-100">
             <li class="rounded nav-item mx-2">
               <a href="" class="nav-link text-muted">
@@ -58,10 +58,10 @@
             <!-- drop down menu -->
 
             <!-- form search  -->
-            <form action="" class="bg form-inline mx-2">
+            <form action="" class="bg form-inline mx-2 ">
               <div class="input-group border rounded">
                 <input aria-describedby="basic-addon1" placeholder="جستجو در آگهی ها"
-                  class="form-control border text-start" name="" type="text" id="" />
+                  class="form-control border text-start fs-8" name="" type="text" id="" />
                 <button class="btn-group bg-white border-0">
                   <i class="text-muted fs-8 bi bi-search input-group-text border-0 bg-white p-2" id=""></i>
                 </button>
@@ -71,7 +71,7 @@
             <!-- form search  -->
 
             <li class="rounded nav-item ms-auto">
-              <div class="container d-flex justify-content-center align-items-center hover">
+              <div class="  hover">
                 <a href="" class="nav-link text-muted">
                   <span>دیوار من</span>
                   <i class="bi bi-person-circle"></i>
@@ -79,7 +79,7 @@
               </div>
             </li>
             <li class="rounded nav-item mx-2">
-              <div class="container d-flex justify-content-center align-items-center hover">
+              <div class="hover">
                 <a href="" class="nav-link text-muted">
                   <span>چت</span>
                   <i class="bi bi-chat mb-3"></i>
@@ -190,9 +190,10 @@
         </ul>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-column">
-            <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')" data-bs-toggle="collapse" data-bs-target="#selectArea"
-              href="#">
-              <label id="selectAreaIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
+            <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')"
+              data-bs-toggle="collapse" data-bs-target="#selectArea" href="#">
+              <label id="selectAreaIcon" class="transition-all-1s"><i
+                  class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
             </a>
 
             <div id="selectArea" class="collapse">
@@ -206,9 +207,11 @@
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAmountIcon')" data-bs-toggle="collapse"
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover"
+              onclick="sidebarButtons_animation('selectAmountIcon')" data-bs-toggle="collapse"
               data-bs-target="#selectAmount" href="#">
-              <label id="selectAmountIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;قیمت
+              <label id="selectAmountIcon" class="transition-all-1s"><i
+                  class="bi bi-caret-down"></i></label>&nbsp;&nbsp;قیمت
             </a>
           </div>
 
@@ -230,9 +233,11 @@
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectCustomerStateIcon')" href="#" data-bs-toggle="collapse"
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover"
+              onclick="sidebarButtons_animation('selectCustomerStateIcon')" href="#" data-bs-toggle="collapse"
               data-bs-target="#selectCustomerState">
-              <label id="selectCustomerStateIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;وضعیت آگهی
+              <label id="selectCustomerStateIcon" class="transition-all-1s"><i
+                  class="bi bi-caret-down"></i></label>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
 
@@ -241,13 +246,15 @@
               <div class="d-flex flex-row p-2 justify-content-between">
                 <h6 class="fs-10 text-black">فقط عکس‌دار</h6>
                 <div class="form-check form-switch">
-                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)" type="checkbox" role="switch" id="toggle-justPic">
+                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)"
+                    type="checkbox" role="switch" id="toggle-justPic">
                 </div>
               </div>
               <div class="d-flex flex-row p-2 justify-content-between">
                 <h6 class="fs-10 text-black">فقط فوری‌ها</h6>
                 <div class="form-check form-switch">
-                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)" type="checkbox" role="switch" id="toggle-justQuick">
+                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)"
+                    type="checkbox" role="switch" id="toggle-justQuick">
                 </div>
               </div>
             </div>
@@ -452,4 +459,3 @@
 </body>
 
 </html>
-
