Added select area modal

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -43,7 +43,7 @@
         <div class="navbar-collapse collapse " id="mynavbar">
           <ul class="navbar-nav flex-row-reverse w-100">
             <li class="rounded nav-item mx-2">
-              <a href="" class="nav-link text-muted">
+              <a href="" class="nav-link text-muted" data-bs-toggle="modal" data-bs-target="#selectAreaModal">
                 <span>کرج</span>
                 <i class="bi bi-geo-alt"></i>
               </a>
@@ -452,6 +452,33 @@
 
     </div>
   </div>
+
+
+
+  <!-- The Modal -->
+<div class="modal" id="selectAreaModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Modal Heading</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Modal body..
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
   <script src="./JS/jquery-3.6.1.slim.min.js"></script>
