--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -75,20 +75,58 @@
             <!-- form search in navbar  -->
 
             <!-- left side menu in navbar -->
+            
             <li class="rounded nav-item ms-auto dropdown">
-              <div class="hover">
-                <a href="" class="nav-link text-muted dropdown-toggle" data-bs-toggle="dropdown">
+              <div class="">
+                <a href="" class="nav-link text-muted " data-bs-toggle="dropdown">
                   <span>دیوار من</span>
-                  <i class="bi bi-person-circle"></i>
+                  <i class="bi bi-person"></i>
                 </a>
-                <div class="dropdown-menu">
-                  <a href="" class="text-black dropdown-item">citys</a>
-                  <a href="" class="text-black dropdown-item">citys</a>
-                  <a href="" class="text-black dropdown-item">citys</a>
-                  <a href="" class="text-black dropdown-item">citys</a>
-                </div> 
+                <!-- دیوار من dropdown -->
+                <div class="dropdown-menu text-muted fs-11 ">
+                  <a href="" class="dropdown-item px-4 text-black-muted-cs border-bottom">
+                    <div class="fs-11 ">
+                      <div class="px-1 py-2">
+                        <span>کاربر دیوار</span>
+                        <i class="bi bi-person"></i>
+                      </div>
+                      <div class="p-1 ">
+                        <span class="text-muted-light">تلفن</span>
+                        <span class="text-muted-light">09375465654</span>
+                      </div>
+                    </div>
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3">
+                    <span>آگهی های من</span>
+                    <i class=" fs-8 bi bi-book pe-1"></i>
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                    <span>نشان شده ها</span>
+                    <i class="bi bi-bookmark"></i>
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                  <span>یادداشت ها</span>
+                  <i class="bi bi-card-list"></i>  
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                    <span>بازدید  های اخیر</span>
+                    <i class="bi bi-clock-history"></i>
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                    <span>دیوار برای کسب و کار ها</span>
+                    <i class="bi bi-shop-window"></i>
+                  </a>
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3">
+                    <span>خروج</span>
+                    <i class="bi bi-box-arrow-right"></i>
+                  </a>
+                    
+                </div>
+                <!-- دیوار من dropdown -->
               </div>
             </li>
+
+
             <li class="rounded nav-item mx-2">
               <div class="hover">
                 <a href="" class="nav-link text-muted">
