clean code title

--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -12,23 +12,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>صفحه اصلی دیوار</title>
+  <title data-react-helmet="true">دیوار کرج: مرجع انواع نیازمندی و آگهی‌های نو و دست دو در شهر کرج</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="https://s100.divarcdn.com/static/thewall-assets/favicon-32x32.png">  
+  <link rel="apple-touch-icon" sizes="180x180" href="https://s100.divarcdn.com/static/thewall-assets/apple-touch-icon.png  ">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://s100.divarcdn.com/static/thewall-assets/favicon-16x16.png">
+  <link rel="mask-icon" href="https://s100.divarcdn.com/static/thewall-assets/safari-pinned-tab.svg" color="#a62626">
 </head>
-
 <body>
-
-  <!-- <i class="bi bi-chat"></i>
-  <i class="bi bi-house-door"></i>
-  <i class="fa-solid fa-laptop"></i>
-  <i class="fa-solid fa-user-plus"></i>
-  <i class="bi bi-briefcase"></i>
-  <i class="fa-solid fa-couch"></i>  
-  <i class="bi bi-smartwatch"></i>
-  <i class="bi bi-mic"></i>
-  <i class="bi bi-headset"></i>
-  <i class="bi bi-geo-alt"></i>  
-  <i class="bi bi-search"></i> -->
-
   <!-- START navbar -->
   <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
     <div class="row">
@@ -110,21 +100,6 @@
       </nav>
     </div>
 
-    <div class="navbar-nav d-md-block d-lg-none">
-      <form action="" class="form-inline border p-0">
-        <div class="input-group  ">
-          <span class="input-group-text border-0 bg-white border-start ">کرج</span>
-          <input type="text" name="" id="" class="border-0 form-control">
-          <span class="input-group-text border-0 border-start bg-white">
-            <i class="fas fa-search"></i>
-          </span>
-        </div>
-      </form>
-    </div>
-  </div>
-  <div class="down-menu fiexd-bottom-block bg-danger">
-    adasd
-  </div>
   <!-- END navbar -->
 
 
