update sidebar scroll

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -175,7 +175,7 @@
     <div class="row">
 
       <!-- START SIDEBAR -->
-      <aside class="col-md-3 position-fixed sidebar">
+      <aside class="col-md-3 position-fixed bottom-0 sidebar">
         <span class="h6">دسته‌ها</span>
         <ul class="list-group border-bottom pb-3">
           <li class="list-group-item border-0">
