--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -175,79 +175,105 @@
     <div class="row">
 
       <!-- START SIDEBAR -->
-      <aside class="col-md-3 position-fixed bottom-0 sidebar">
-        <span class="h6">دسته‌ها</span>
-        <ul class="list-group border-bottom pb-3">
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-building"></i> &nbsp;&nbsp;
-              املاک
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
-              وسایل نقلیه
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-phone"></i> &nbsp;&nbsp;
-              کالای دیجیتال
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-lamp"></i> &nbsp;&nbsp;
-              خانه و آشپزخانه
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-brush"></i> &nbsp;&nbsp;
-              خدمات
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-watch"></i> &nbsp;&nbsp;
-              وسایل شخصی
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
-              سرگرمی و فراغت
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-people"></i> &nbsp;&nbsp;
-              اجتماعی
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
-              تجهیزات و صنعتی
-            </a>
-          </li>
-          <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-              <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
-              استخدام و کاریابی
-            </a>
-          </li>
-        </ul>
-        <div class="border-bottom d-flex flex-column">
-          <div class="d-flex flex-column">
-            <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')"
-              data-bs-toggle="collapse" data-bs-target="#selectArea" href="#">
-              <label id="selectAreaIcon" class="transition-all-1s"><i
-                  class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
-            </a>
-
-            <div id="selectArea" class="collapse">
+      <aside class="col-md-3 position-fixed bottom-0 sidebar ">
+        <div class="position-static h-auto">
+          <span class="h6">دسته‌ها</span>
+          <ul class="list-group border-bottom pb-3">
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-building"></i> &nbsp;&nbsp;
+                املاک
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
+                وسایل نقلیه
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-phone"></i> &nbsp;&nbsp;
+                کالای دیجیتال
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-lamp"></i> &nbsp;&nbsp;
+                خانه و آشپزخانه
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-brush"></i> &nbsp;&nbsp;
+                خدمات
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-watch"></i> &nbsp;&nbsp;
+                وسایل شخصی
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
+                سرگرمی و فراغت
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-people"></i> &nbsp;&nbsp;
+                اجتماعی
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
+                تجهیزات و صنعتی
+              </a>
+            </li>
+            <li class="list-group-item border-0">
+              <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
+                <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
+                استخدام و کاریابی
+              </a>
+            </li>
+          </ul>
+          <div class="border-bottom d-flex flex-column">
+            <div class="d-flex flex-column">
+              <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')"
+                data-bs-toggle="collapse" data-bs-target="#selectArea" href="#">
+                <label id="selectAreaIcon" class="transition-all-1s"><i
+                    class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
+              </a>
+  
+              <div id="selectArea" class="collapse">
+                <div class="d-flex flex-row-reverse align-items-center">
+                  <input type="text" class="form-control text-start fs-10 mb-3 mt-2 p-2 pe-5 input-focus"
+                    placeholder="تعیین محل">
+                  <i class="bi bi-caret-left position-absolute text-muted pe-2 p-b-2 fs-5"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="border-bottom d-flex flex-column">
+            <div class="d-flex flex-row">
+              <a class=" text-muted fs-8 w-100 p-3 text-black-hover"
+                onclick="sidebarButtons_animation('selectAmountIcon')" data-bs-toggle="collapse"
+                data-bs-target="#selectAmount" href="#">
+                <label id="selectAmountIcon" class="transition-all-1s"><i
+                 class="bi bi-caret-down"></i></label>&nbsp;&nbsp;قیمت
+              </a>
+            </div>
+  
+            <div id="selectAmount" class="collapse">
+              <div class="d-flex flex-row-reverse align-items-center">
+                <input type="text" class="form-control text-start fs-10 mb-1 mt-2 p-2 pe-5 input-focus"
+                  placeholder="مثلا 70000000">
+                <h6 class="text-muted fs-10 pe-3">حداقل</h6>
+                <h6 class="position-absolute text-muted pe-2 p-b-2 fs-10">تومان</h6>
+              </div>
               <div class="d-flex flex-row-reverse align-items-center">
                 <input type="text" class="form-control text-start fs-10 mb-3 mt-2 p-2 pe-5 input-focus"
                   placeholder="مثلا 70000000">
