category modal add

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -59,10 +59,11 @@
               </a>
             </li>
             <li class="rounded nav-item mx-2">
-              <a data-bs-toggle="modal" data-bs-target="#selectAreaModal1"
+              <a data-bs-toggle="modal" data-bs-target="#opencategories"
                 class="text-muted fs-8 nav-link dropdown-toggle position-relative">
                 <span>دسته ها</span>
               </a>
+              
             </li>
 
             <!-- form search in navbar -->
@@ -982,6 +983,77 @@
   </div>
   <!-- End of The Modal Citys-->
 
+
+  <!-- modal of categories -->
+  <div class="modal fade" id="opencategories" dir="rtl">
+    <div class="modal-dialog  modal-dialog-centered">
+      <div class="modal-content ">
+        <div class="div modal-header cursor-pointer">
+          <span>دسته بندی ها</span>
+          <i class="bi bi-archive"></i>
+        </div>
+        <!-- body of modal   -->
+        <div class="modal-body p-1 fs-8 ">
+              <div class='px-3 py-2 w-100 hover-light  cursor-pointer transition-bgcolor-1s border-bottom'>
+                <i class="bi bi-house-door text-muted"></i>
+                  <a href="" class="text-muted">املاک و خانه</a>
+                </div>
+
+                <div class='px-3 py-2 w-100 cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-car-front text-muted"></i>
+                  <a href="" class="text-muted">وسایل نقلیه</a>
+                </div>
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-phone text-muted"></i>
+                  <a href="" class="text-muted">کالای دیجیتال</a>
+                </div>
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-lamp text-muted"></i>
+                  <a href="" class="text-muted">خانه و آشپزخانه</a>
+                </div>
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-palette2 text-muted"></i>
+                  <a href="" class="text-muted">خدمات</a>
+                </div>
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-smartwatch text-muted"></i>
+                  <a href="" class="text-muted">وسایل شخصی</a>
+                </div>
+
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-dice-5 text-muted"></i>
+                  <a href="" class="text-muted">سرگرمی و فراغت</a>
+                </div>
+
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-people-fill text-muted"></i>
+                  <a href="" class="text-muted">اجتماعی</a>
+                </div>
+
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s  border-bottom'>
+                  <i class="bi bi-mic text-muted"></i>
+                  <a href="" class="text-muted">تحهیزات و صنعتی</a>
+                </div>
+
+                <div class='px-3 py-2 w-100  cursor-pointer  hover-light transition-bgcolor-1s '>
+                  <i class="bi bi-briefcase text-muted"></i>
+                  <a href="" class="text-muted">استخدام و کاریابی</a>
+                </div>
+        </div>
+        <!-- end of body modal -->
+          <div class="modal-footer justify-content-between ">
+            <a href="" class="btn bg-brand-color text-white">
+              همه آگهی ها
+            </a>
+            <button class="btn bg-light-owen" data-bs-dismiss="modal">
+              <span>خروج</span>
+            </button>
+          </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal of categories -->
+  
 
   <script src="./JS/jquery-3.6.1.slim.min.js"></script>
   <script src="JS/bootstrap.bundle.min.js"></script>
