--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -943,7 +943,7 @@
   </div>
 
 
-<!-- all Modals here modals (For Search) -->
+  <!-- all Modals here modals (For Search) -->
 
   <!-- The Modal Citys-->
   <div class="modal" id="selectAreaModal" dir="rtl">
@@ -951,30 +951,192 @@
       <div class="modal-content">
 
         <!-- Modal Header -->
-        <div class="modal-header p-4 d-flex flex-column">
+        <div class="modal-header d-flex flex-column border-0 p-4">
+
           <div class="d-flex w-100 justify-content-between">
             <h4 class="modal-title fs-5">انتخاب شهر</h4>
             <button type="button"
               class="bg-transparent text-danger border-0 bg-danger-hover border-radius-30 pe-3 ps-3 fs-10"
-              data-bs-dismiss="modal">حذف همه</button>
+              onclick="document.querySelector('#city-tag-names').innerHTML = '<h6 class=\'text-muted fs-8 pt-2\'>حداقل یک شهر را انتخاب کنید.</h6>'; unchecked_checkboxes('city-tag-checkbox'); document.querySelector('#btnSelectCities').disabled = true;">حذف
+              همه</button>
           </div>
-          <div class="d-flex w-100 mt-2 p-2">
-            <div class="d-flex align-items-center bg-transparent border-danger border-radius-30 w-100 p-2">
-              <h6 class="text-danger fs-8">کرج</h6>
-              <button
-                class="bg-transparent text-danger border-0 border-radius-circle bg-danger-hover fs-10 fw-bold p-1">X</button>
-            </div>
+
+          <div class="d-flex w-100 mt-2 p-2 overflow-auto" id="city-tag-names">
+            <h6 class="text-muted fs-8 pt-2">حداقل یک شهر را انتخاب کنید.</h6>
           </div>
+
+          <div class="form-group position-relative w-100 mt-3 pt-1">
+            <input type="text" class="form-control input-focus border-gray-hover fs-8 ps-5"
+              placeholder="جستجوی در شهرها" />
+            <i class="bi bi-search position-absolute text-muted top-0 m-2 fs-5"></i>
+          </div>
+
         </div>
 
         <!-- Modal body -->
         <div class="modal-body">
-          Modal body..
+          <ul>
+
+            <div id="sectionShowAreas">
+
+              <!-- Each Area -->
+              <li>
+                <div class="border-dark border-bottom d-flex flex-column">
+                  <div class="d-flex">
+                    <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
+                      onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                      id="city_id" href="#">
+                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      غربی
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <!-- End Each Area -->
+              <!-- Each Area -->
+              <li>
+                <div class="border-dark border-bottom d-flex flex-column">
+                  <div class="d-flex">
+                    <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
+                      onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                      id="city_id" href="#">
+                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      غربی
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <!-- End Each Area -->
+              <!-- Each Area -->
+              <li>
+                <div class="border-dark border-bottom d-flex flex-column">
+                  <div class="d-flex">
+                    <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
+                      onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                      id="city_id" href="#">
+                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      غربی
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <!-- End Each Area -->
+              <!-- Each Area -->
+              <li>
+                <div class="border-dark border-bottom d-flex flex-column">
+                  <div class="d-flex">
+                    <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
+                      onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                      id="city_id" href="#">
+                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      غربی
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <!-- End Each Area -->
+              <!-- Each Area -->
+              <li>
+                <div class="border-dark border-bottom d-flex flex-column">
+                  <div class="d-flex">
+                    <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
+                      onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                      id="city_id" href="#">
+                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      غربی
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <!-- End Each Area -->
+
+            </div>
+
+
+            <!-- Partial view for select CITY in each AREA -->
+
+            <div class="d-none d-flex flex-column overflow-auto" id="sectionShowCities">
+
+              <div class="d-flex">
+                <a class="text-dark fs-6 w-100 p-3 ps-0 d-flex"
+                  onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
+                  href="#">
+                  <label class="text-muted fs-5"><i class="bi bi-arrow-right"></i></label>&nbsp;&nbsp;همه شهرها
+                </a>
+              </div>
+
+              <div>
+                <ul>
+
+                  <!-- Each City -->
+                  <li>
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                      href="#">
+                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-فردیس"
+                        onclick="selectCityfromArea('فردیس', this.checked)">&nbsp;&nbsp;فردیس
+                    </a>
+                  </li>
+                  <!-- End Each City -->
+                  <!-- Each City -->
+                  <li>
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                      href="#">
+                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-کرج"
+                        onclick="selectCityfromArea('کرج', this.checked)">&nbsp;&nbsp;کرج
+                    </a>
+                  </li>
+                  <!-- End Each City -->
+                  <!-- Each City -->
+                  <li>
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                      href="#">
+                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-گوهردشت"
+                        onclick="selectCityfromArea('گوهردشت', this.checked)">&nbsp;&nbsp;گوهردشت
+                    </a>
+                  </li>
+                  <!-- End Each City -->
+                  <!-- Each City -->
+                  <li>
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                      href="#">
+                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-زورآباد"
+                        onclick="selectCityfromArea('زورآباد', this.checked)">&nbsp;&nbsp;زورآباد
+                    </a>
+                  </li>
+                  <!-- End Each City -->
+                  <!-- Each City -->
+                  <li>
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                      href="#">
+                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-عظیمیه"
+                        onclick="selectCityfromArea('عظیمیه', this.checked)">&nbsp;&nbsp;عظیمیه
+                    </a>
+                  </li>
+                  <!-- End Each City -->
+
+
+                </ul>
+              </div>
+
+            </div>
+
+            <!-- END Partial view for select area in each city -->
+
+          </ul>
         </div>
 
         <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+        <div class="modal-footer border-0">
+          <div class="row w-100">
+            <div class="col-md-6 px-1">
+              <button type="button" class="btn bg-light border-1 border-dark text-muted text-black-hover w-100"
+                data-bs-dismiss="modal">انصراف</button>
+            </div>
+            <div class="col-md-6 px-1">
+              <button type="button" class="btn bg-color-brand border-0 text-black-hover w-100" id="btnSelectCities"
+                disabled>تایید</button>
+            </div>
+          </div>
         </div>
 
       </div>
