--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -24,17 +24,6 @@
 
 <body>
 
-  <!-- <i class="bi bi-chat"></i>
-  <i class="bi bi-house-door"></i>
-  <i class="fa-solid fa-laptop"></i>
-  <i class="fa-solid fa-user-plus"></i>
-  <i class="bi bi-briefcase"></i>
-  <i class="fa-solid fa-couch"></i>  
-  <i class="bi bi-smartwatch"></i>
-  <i class="bi bi-mic"></i>
-  <i class="bi bi-headset"></i>
-  <i class="bi bi-geo-alt"></i>  
-  <i class="bi bi-search"></i> -->
 
   <!-- START navbar -->
   <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
@@ -58,7 +47,7 @@
                 <i class="bi bi-geo-alt"></i>
               </a>
             </li>
-            <li class="rounded nav-item mx-2">
+            <li class="cursor-pointer rounded nav-item mx-2">
               <a data-bs-toggle="modal" data-bs-target="#opencategories"
                 class="text-muted fs-8 nav-link dropdown-toggle position-relative">
                 <span>دسته ها</span>
@@ -67,14 +56,12 @@
             </li>
 
             <!-- form search in navbar -->
-            <form action="" class="bg form-inline mx-2 ">
-              <div class="input-group border rounded">
-                <input aria-describedby="basic-addon1" placeholder="جستجو در آگهی ها"
-                  class="form-control border text-start fs-8" name="" type="text" id="" />
-                <button class="btn-group bg-white border-0">
-                  <i class="text-muted fs-8 bi bi-search input-group-text border-0 bg-white p-2" id=""></i>
+            <form action="" class="form-inline w-25 bg-light-owen-lighter rounded">
+              <div class="input-group ">
+                <input dir="rtl" class="border-0 form-control p-0 bg-light-owen-lighter" type="text"  placeholder="جستجو در آگهی ها">
+                <button class="border-0 input-group-text btn bg-light-owen-lighter">
+                  <i class=" bi bi-search" id=""></i>
                 </button>
-
               </div>
             </form>
             <!-- form search in navbar  -->
@@ -356,11 +343,12 @@
         <div class="d-flex align-items-center justify-content-between">
 
           <a class="d-flex align-items-center text-color-brand p-3 fs-10 miniSidebar-button btn-res-bottom" href="#"><span>دیوار آگهی‌ها</span></a>
-          
-          <button
-            class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button btn-res-bottom "><i
-              class="bi bi-list-ul pe-3 icon-btn-res-bottom "></i><span>دسته‌ها</span>
-          </button>
+          <!-- open categorie modal -->
+          <button data-bs-target="#opencategories" data-bs-toggle="modal"
+          class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button btn-res-bottom "><i
+          class="bi bi-list-ul pe-3 icon-btn-res-bottom "></i><span>دسته‌ها</span>
+        </button>
+        <!-- open categorie modal -->
           
           <button
             class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button btn-res-bottom"><i
@@ -380,9 +368,7 @@
       </aside>
       <!-- END SIDEBAR mini sidebar down -->
 
-
       <!-- start MAIN CARD -->
-
       <div class="col-md-12 col-lg-9 ms-auto">
         <div class="row" dir="ltr">
           <!-- card start -->
@@ -434,8 +420,6 @@
         </div>
       </div>
       <!-- start MAIN CARD -->
-
-
 
     </div>
   </div>
@@ -641,7 +625,6 @@
     </div>
   </div>
   <!-- End of The Modal Citys-->
-
 
   <!-- modal of categories -->
   <div class="modal fade" id="opencategories" dir="rtl">
