fix termali and clean code

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -25,7 +25,7 @@
 <body>
 
 
-  <!-- START navbar -->
+<!-- START navbar -->
   <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
     <div class="row">
       <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse">
@@ -75,8 +75,8 @@
                   <i class="bi bi-person"></i>
                 </a>
                 <!-- دیوار من dropdown -->
-                <div class="dropdown-menu text-muted fs-11 ">
-                  <a href="" class="dropdown-item px-4 text-black-muted-cs border-bottom">
+                <div class="dropdown-menu text-muted fs-11  ">
+                  <a href="" class="dropdown-item px-4 text-black-muted-cs border-bottom transition-bgcolor-1s ">
                     <div class="fs-11 ">
                       <div class="px-1 py-2">
                         <span>کاربر دیوار</span>
@@ -88,27 +88,27 @@
                       </div>
                     </div>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s ">
                     <span>آگهی های من</span>
                     <i class=" fs-8 bi bi-book pe-1"></i>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>نشان شده ها</span>
                     <i class="bi bi-bookmark"></i>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>یادداشت ها</span>
                     <i class="bi bi-card-list"></i>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>بازدید های اخیر</span>
                     <i class="bi bi-clock-history"></i>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>دیوار برای کسب و کار ها</span>
                     <i class="bi bi-shop-window"></i>
                   </a>
-                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3">
+                  <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 transition-bgcolor-1s ">
                     <span>خروج</span>
                     <i class="bi bi-box-arrow-right"></i>
                   </a>
@@ -160,13 +160,13 @@
     <!-- responsive header search bar -->
 
   </div>
-  <!-- END of navbar -->
+<!-- END of navbar -->
 
 
-  <div class="container-fluid mt-5 pt-5" dir="rtl">
+<div class="container-fluid mt-5 pt-5" dir="rtl">
     <div class="row">
 
-      <!-- START SIDEBAR mini sidebar down -->
+<!-- START SIDEBAR mini sidebar down -->
       <aside class="col-md-3 position-fixed bottom-0 sidebar ">
         <div class="position-static h-auto">
           <span class="h6">دسته‌ها</span>
@@ -366,9 +366,9 @@
         
           </div>
       </aside>
-      <!-- END SIDEBAR mini sidebar down -->
+<!-- END SIDEBAR mini sidebar down -->
 
-      <!-- start MAIN CARD -->
+<!-- start MAIN CARD -->
       <div class="col-md-12 col-lg-9 ms-auto">
         <div class="row" dir="ltr">
           <!-- card start -->
@@ -419,15 +419,15 @@
           <!-- card start -->
         </div>
       </div>
-      <!-- start MAIN CARD -->
+<!-- start MAIN CARD -->
 
     </div>
-  </div>
+</div>
 
 
-  <!-- all Modals here modals (For Search) -->
 
-  <!-- The Modal Citys-->
+<!-- all Modals here modals (For Search) -->
+<!-- The Modal Citys-->
   <div class="modal fade" id="selectAreaModal" dir="rtl">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -624,9 +624,9 @@
       </div>
     </div>
   </div>
-  <!-- End of The Modal Citys-->
+<!-- End of The Modal Citys-->
 
-  <!-- modal of categories -->
+<!-- modal of categories -->
   <div class="modal fade" id="opencategories" dir="rtl">
     <div class="modal-dialog  modal-dialog-centered">
       <div class="modal-content ">
@@ -694,12 +694,11 @@
       </div>
     </div>
   </div>
-  <!-- modal of categories -->
+<!-- modal of categories -->
 
 
   <script src="./JS/jquery-3.6.1.slim.min.js"></script>
   <script src="JS/bootstrap.bundle.min.js"></script>
   <script src="JS/script.js"></script>
 </body>
-
 </html>
