fix small 1-2-3 in customer

--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -18,13 +18,13 @@
   <link rel="icon" type="image/png" sizes="16x16" href="https://s100.divarcdn.com/static/thewall-assets/favicon-16x16.png">
   <link rel="mask-icon" href="https://s100.divarcdn.com/static/thewall-assets/safari-pinned-tab.svg" color="#a62626">
 </head>
-<body>
+<body class="mt-cs">
 
 
   <!-- START navbar -->
-  <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
-    <div class="row">
-      <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse">
+  <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0   ">
+    <div class="row ">
+      <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse ">
         <!-- brand logo -->
         <a href="" class="d-none d-lg-block navbar-brand ps-5 pe-3 border-end">
           <img style="width: 50px"
@@ -160,7 +160,7 @@
 
   <!-- 000000000000000000000000000000000000000000000000000000000  -->
 
-<div class="container mt-5 pt-5 px-3">
+<div class="container mt-5 pt-5 ">
 <!-- breadcrumb -->
     <div class="breadcrumb-container  " dir="rtl">
       <ol class="breadcrumb  rounded px-1 fs-8">
