--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- custom css -->
   <link rel="stylesheet" href="./CSS/bootstrap.rtl.min.css" />
+  <link rel="stylesheet" href="./CSS/header.css" />
   <link rel="stylesheet" href="./CSS/style.css" />
+  <link rel="stylesheet" href="./CSS/footer.css" />
   <link rel="stylesheet" href="./Main.css" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
