--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- custom css -->
   <link rel="stylesheet" href="./CSS/bootstrap.rtl.min.css" />
-  <link rel="stylesheet" href="./CSS/header.css" />
-  <link rel="stylesheet" href="./CSS/style.css" />
-  <link rel="stylesheet" href="./CSS/footer.css" />
   <link rel="stylesheet" href="./Main.css" />
+  <link rel="stylesheet" href="./CSS/footer.css" />
+  <link rel="stylesheet" href="./CSS/header.css" />
+  <link rel="stylesheet" href="./CSS/main-card.css" />
+  <link rel="stylesheet" href="./CSS/modal-categoris.css" />
+  <link rel="stylesheet" href="./CSS/modal-city.css" />
+  <link rel="stylesheet" href="./CSS/sidebar.css" />
+  <link rel="stylesheet" href="./CSS/style.css" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,7 +45,6 @@
 
         <div class="navbar-collapse collapse fs-8" id="mynavbar">
           <ul class="navbar-nav flex-row-reverse w-100">
-
 
             <li class="rounded nav-item mx-2">
               <a href="" class="nav-link text-muted" data-bs-toggle="modal" data-bs-target="#selectAreaModal">
@@ -150,11 +153,11 @@
     <!-- responsive header search bar -->
     <div class="navbar-nav d-md-block d-lg-none">
       <form action="" class="form-inline border p-0">
-        <div class="input-group  ">
+        <div class="input-group">
           <span class="input-group-text border-0 bg-white border-start ">کرج</span>
           <input type="text" name="" id="" class="border-0 form-control">
           <span class="input-group-text border-0 border-start bg-white">
-            <i class="fas fa-search"></i>
+            <i class="bi bi-search"></i>
           </span>
         </div>
       </form>
@@ -376,7 +379,7 @@
           <!-- card start -->
 
           <div class="col-md-6 col-lg-6 p-2">
-            <div class="bg-light shadow-sm rounded border  p-2">
+            <div class="bg-light shadow-sm rounded border p-2">
               <a class="link-ind-page d-flex justify-content-between" href="">
                 <div>
                   <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
@@ -416,13 +419,10 @@
           </div>
 
 
-
-
           <!-- card start -->
         </div>
       </div>
-<!-- start MAIN CARD -->
-
+<!-- END MAIN CARD -->
     </div>
 </div>
 
@@ -441,7 +441,7 @@
             <h4 class="modal-title fs-5">انتخاب شهر</h4>
             <button type="button"
               class="bg-transparent text-danger border-0 bg-danger-hover border-radius-30 pe-3 ps-3 fs-10"
-              onclick="document.querySelector('#city-tag-names').innerHTML = '<h6 class=\'text-muted fs-8 pt-2\'>حداقل یک شهر را انتخاب کنید.</h6>'; unchecked_checkboxes('city-tag-checkbox'); document.querySelector('#btnSelectCities').disabled = true;">حذف
+              onclick="document.querySelector('#city-tag-names').innerHTML ='<h6 class=\'text-muted fs-8 pt-2\'>حداقل یک شهر را انتخاب کنید.</h6>'; unchecked_checkboxes('city-tag-checkbox'); document.querySelector('#btnSelectCities').disabled = true;">حذف
               همه</button>
           </div>
 
@@ -542,7 +542,7 @@
             <div class="d-none d-flex flex-column overflow-auto" id="sectionShowCities">
 
               <div class="d-flex">
-                <a class="text-dark fs-6 w-100 p-3 ps-0 d-flex"
+                <a class="text-dark fs-11 w-100 p-3 ps-0 d-flex"
                   onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                   href="#">
                   <label class="text-muted fs-5"><i class="bi bi-arrow-right"></i></label>&nbsp;&nbsp;همه شهرها
@@ -554,7 +554,7 @@
 
                   <!-- Each City -->
                   <li>
-                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-فردیس"
                         onclick="selectCityfromArea('فردیس', this.checked)">&nbsp;&nbsp;فردیس
@@ -563,7 +563,7 @@
                   <!-- End Each City -->
                   <!-- Each City -->
                   <li>
-                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-کرج"
                         onclick="selectCityfromArea('کرج', this.checked)">&nbsp;&nbsp;کرج
@@ -572,7 +572,7 @@
                   <!-- End Each City -->
                   <!-- Each City -->
                   <li>
-                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-گوهردشت"
                         onclick="selectCityfromArea('گوهردشت', this.checked)">&nbsp;&nbsp;گوهردشت
@@ -581,16 +581,16 @@
                   <!-- End Each City -->
                   <!-- Each City -->
                   <li>
-                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-زورآباد"
-                        onclick="selectCityfromArea('زورآباد', this.checked)">&nbsp;&nbsp;زورآباد
+                        onclick="selectCityfromArea('عظیمیه جنوبی (اسلام آباد)', this.checked)">&nbsp;&nbsp;زورآباد
                     </a>
                   </li>
                   <!-- End Each City -->
                   <!-- Each City -->
                   <li>
-                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-6 w-100 my-3 p-2 py-0 d-flex"
+                    <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-عظیمیه"
                         onclick="selectCityfromArea('عظیمیه', this.checked)">&nbsp;&nbsp;عظیمیه
